<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentProfessor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfessorFragment">

    <EditText
        android:id="@+id/etCodigoProf"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="133dp"
        android:ems="10"
        android:hint="@string/codigo"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/etTitulacaoProf"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarProf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnBuscarProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="23dp"
        android:text="@string/buscar"
        app:layout_constraintBottom_toTopOf="@+id/etNomeProf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etCodigoProf"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloProf" />

    <EditText
        android:id="@+id/etNomeProf"
        android:layout_width="314dp"
        android:layout_height="48dp"
        android:layout_marginBottom="29dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="textStart"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etTitulacaoProf"
        app:layout_constraintEnd_toEndOf="@+id/btnBuscarProf"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etCodigoProf"
        app:layout_constraintTop_toBottomOf="@+id/btnBuscarProf" />

    <EditText
        android:id="@+id/etTitulacaoProf"
        android:layout_width="314dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="38dp"
        android:ems="10"
        android:hint="@string/titulacao"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="viewStart"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnInserirProf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomeProf" />

    <Button
        android:id="@+id/btnInserirProf"
        android:layout_width="108dp"
        android:layout_height="48dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="29dp"
        android:text="@string/inserir"
        app:layout_constraintBottom_toTopOf="@+id/btnExcluirProf"
        app:layout_constraintEnd_toStartOf="@+id/btnModificarProf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTitulacaoProf" />

    <Button
        android:id="@+id/btnModificarProf"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="36dp"
        android:text="@string/modificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnInserirProf"
        app:layout_constraintTop_toBottomOf="@+id/etTitulacaoProf" />

    <Button
        android:id="@+id/btnExcluirProf"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="46dp"
        android:text="@string/excluir"
        app:layout_constraintBottom_toTopOf="@+id/tvListarDisc"
        app:layout_constraintEnd_toStartOf="@+id/btnListarProf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInserirProf" />

    <Button
        android:id="@+id/btnListarProf"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="42dp"
        android:text="@string/listar"
        app:layout_constraintBottom_toTopOf="@+id/tvListarDisc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnExcluirProf"
        app:layout_constraintTop_toBottomOf="@+id/btnModificarProf" />

    <TextView
        android:id="@+id/tvListarDisc"
        android:layout_width="412dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnExcluirProf" />

    <TextView
        android:id="@+id/tvTituloProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="73dp"
        android:layout_marginBottom="35dp"
        android:text="@string/professor"
        app:layout_constraintBottom_toTopOf="@+id/btnBuscarProf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>